# rhsrvany

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  README.md  RHSrvAny.sln  configure.ac  mingw32-srvany.spec
RHSrvAny/: Makefile.am  RHSrvAny.c  RHSrvAny.h  RHSrvAnyInfo.rc  mc.bat  resource.h
SrvAny/: Makefile.am  SrvAny.c  SrvAny.h  SrvAny.mc  SrvAny.vcproj  mc.bat  resource.h
pnp_wait/: Makefile.am  pnp_wait.c
